# rcfiles

./: .gitmodules  rcfiles  readme.md
dotfiles/: .gitconfig  .gitignore_global  .vimrc  999-kernel-parms.conf
dotfiles/systemd/: emacs.service
git/: .gitconfig  .gitignore_global
shell/: linux_belief.sh  shell.sh
shell/dev.sh.d/: proj_init.sh  projinit.sh
shell/dev.sh.d/templ/cmake/app-demo/src/: CMakeLists.txt  main.cpp.tmpl
shell/dev.sh.d/templ/cmake/app-demo/src/conf/: AppConfig.h
shell/dev.sh.d/templ/cmake/app-demo/src/log/: Logger.h
shell/dev.sh.d/templ/cmake/app-demo/src/util/: TimeUtil.h
shell/path.sh.d/: 10-cuda.sh  10-go.sh  10-java.sh  10-nodejs.sh  10-qt.sh  10-quartus.sh  10-rust.sh  10-texlive.sh  10-torch.sh  11-openfoam7.sh  11-python.sh  20-arm.sh  30-mips.sh  90-amdsdk.sh  90-arduino.sh  90-pylon.sh  90-tilera.sh  99-path.sh
shell/shell.sh.d/: 10-color.sh  20-alias.sh  30-history.sh  40-misc.sh  50-ps.sh  60-opt.sh  80-autojump.sh  80-docker.sh
shell/utils.sh.d/: 00-ip.sh  00-scripts.sh  10-findpid.sh  10-osx-arc-collection.sh  10-typora.sh  80-cryptsetup.sh  80-du.sh  80-echo.sh  80-find.sh  80-findfile.sh  80-fswebcam.sh  80-git.sh  80-nmap.sh  80-openssl.sh  80-ssh.sh  80-wmctrl.sh  80-xargs.sh  80-xclip.sh  90-cli_proxy.sh  90-cmaket.sh  90-exit.sh  90-from_unixtime.sh  90-ii.sh  90-socks.sh  90-ssh2comp.sh  90-tribfutils.sh  90-wechat.sh  90-whereip.sh
shell/zsh.sh.d/: 10-autoload.sh  10-setopt.sh  20-bindkey.sh  90-cdkey.sh  90-searchhistory.sh
sublime/snippets/: Default (Linux).sublime-keymap  (+13 more)
theme/: tribf.zsh-theme
(+19 files in other folders)
